2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
           service:
            name: two-one
            port:
             name: nginx
      - path: /api
        pathType: Prefix
        backend:
        service:
            name: two-two
            port:
             name: multitool
